// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`disabled 1`] = `
"<div class="flex justify-start items-center cursor-not-allowed opacity-50">
  <div class="rounded-sm border-solid border border-(--color-neutral-500) w-4 h-4">
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`label prop 1`] = `
"<div class="cursor-pointer flex justify-start items-center">
  <div class="rounded-sm border-solid border border-(--color-neutral-500) w-4 h-4">
    <!--v-if-->
  </div>
  <div class="ms-2 pb-1 text-base">custom label</div>
</div>"
`;

exports[`size prop 1`] = `
"<div class="cursor-pointer flex justify-start items-center">
  <div class="rounded-sm border-solid border border-(--color-neutral-500) w-3.5 h-3.5">
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;
